# sqlx-mssql-odbc

./: .dev.env  .gitignore  Cargo.toml  Containerfile.dev  LICENSE  README.md  compose.dev.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: publish.yml
examples/full/: Cargo.toml
examples/full/.sqlx/: query-29a4123ba71f8745059ce083d9fd9a1a88382ab5720188a712be8e8e2a938892.json  query-2f40044b8773c085b2988aef0df862a9a2fd74d012dc1f286224ea6f2413149a.json  query-371f81b63b65acde0939e98efb40f994612b949991151a77e437e2dc189a818b.json  query-81a56fa90e2044e698ae1732845f102de1ceece0590aea92ab2ea14d910e0a31.json  query-b4d8c359c5f816ef545995dc89ec8b60e28cde5a6ea09bc3b7179b31e034a1a7.json  query-dc64e1d25d9ced3a49130cee99f6edc3f70a4917910cf3b76faefc24ac32159d.json
examples/full/migrations/: 20260618173955_initial_migration.sql
examples/full/src/: main.rs
sqlx-mssql-odbc-cli/: Cargo.toml
sqlx-mssql-odbc-cli/src/: main.rs
sqlx-mssql-odbc-core/: Cargo.toml
sqlx-mssql-odbc-core/src/: any.rs  arguments.rs  column.rs  connection.rs  database.rs  describe.rs  error.rs  lib.rs  migrate.rs  options.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_checking.rs  type_info.rs  value.rs
sqlx-mssql-odbc-core/src/connection/: actor.rs  command.rs  helpers.rs
sqlx-mssql-odbc-core/src/types/: bigdecimal.rs  chrono.rs  decimal.rs  geo.rs  json.rs  mod.rs  time.rs  uuid.rs
sqlx-mssql-odbc-macros/: Cargo.toml
sqlx-mssql-odbc-macros/src/: lib.rs
src/: lib.rs
tests/: mssql.rs
tests/migrations/: 20260618173955_initial_test_migration.sql
