[package]
name = "sqlx-mssql-odbc-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-sqlx-mssql"
path = "src/bin/cargo-sqlx-mssql.rs"

[[bin]]
name = "sqlx-mssql"
path = "src/bin/sqlx-mssql.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
sqlx-cli = "0.9.0"
sqlx-core = { version = "=0.9.0", default-features = false, features = ["any", "migrate"] }
sqlx-mssql-odbc-core = { version = "0.1.0", path = "../sqlx-mssql-odbc-core", features = ["any", "migrate"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
