[package]
name = "sqlx-mssql-odbc-cli"
version = "0.1.8"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/strawberyy-coconut/sqlx-mssql-odbc"
description = "CLI tools for sqlx-mssql-odbc."
readme = "../README.md"
keywords = ["sqlx", "mssql", "odbc", "database", "cli"]
categories = ["database", "command-line-utilities"]
rust-version = "1.96"

[[bin]]
name = "cargo-sqlx-mssql"
path = "src/bin/cargo-sqlx-mssql.rs"

[[bin]]
name = "sqlx-mssql"
path = "src/bin/sqlx-mssql.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.16"
sqlx-cli = "0.9.0"
sqlx-core = { version = "0.9.0", default-features = false, features = ["any", "migrate"] }
sqlx-mssql-odbc-core = { version = "0.1.8", path = "../sqlx-mssql-odbc-core", features = ["any", "migrate", "runtime-tokio"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
