[package]
name = "sqlx-mssql-odbc-core"
version = "0.0.1"
edition = "2024"


[features]
default = []
any = ["sqlx-core/any"]
bigdecimal = ["dep:bigdecimal", "sqlx-core/bigdecimal"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
decimal = ["rust_decimal"]
json = ["dep:serde", "dep:serde_json", "sqlx-core/json"]
migrate = ["sqlx-core/migrate"]
offline = ["sqlx-core/offline", "dep:serde", "dep:sqlx-macros-core"]
runtime-tokio = ["sqlx-core/_rt-tokio", "dep:tokio"]
rust_decimal = ["dep:rust_decimal", "sqlx-core/rust_decimal"]
tls-none = []
uuid = ["dep:uuid", "sqlx-core/uuid"]
vendored-unix-odbc = ["odbc-api/vendored-unix-odbc"]

[dependencies]
bigdecimal = { version = "0.4.0", optional = true }
chrono = { version = "0.4.34", default-features = false, features = ["std", "clock"], optional = true }
futures-core = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
flume = "0.12.0"
log = "0.4.28"
odbc-api = "28"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.142", features = ["raw_value"], optional = true }
sqlx-core = { version = "=0.9.0", default-features = false, features = ["any"] }
sqlx-macros-core = { version = "=0.9.0", optional = true, features = ["macros"] }
thiserror = "2.0.17"
tokio = { version = "1.25.0", features = ["rt"], optional = true }
url = "2.5.7"
uuid = { version = "1.12.1", optional = true }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
