[package]
name = "sqlx-mssql-odbc-core"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/strawberyy-coconut/sqlx-mssql-odbc"
description = "Core MSSQL driver for SQLx via ODBC."
readme = "../README.md"
keywords = ["sqlx", "mssql", "sql-server", "odbc", "database"]
categories = ["database"]
rust-version = "1.96"
documentation = "https://docs.rs/sqlx-mssql-odbc"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = []
any = ["sqlx-core/any"]
bigdecimal = ["dep:bigdecimal", "sqlx-core/bigdecimal"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
time = ["dep:time", "sqlx-core/time"]
decimal = ["rust_decimal"]
json = ["dep:serde", "dep:serde_json", "sqlx-core/json"]
migrate = ["sqlx-core/migrate"]
offline = ["sqlx-core/offline", "dep:serde", "dep:sqlx-macros-core"]
runtime-tokio = ["sqlx-core/_rt-tokio"]
rust_decimal = ["dep:rust_decimal", "sqlx-core/rust_decimal"]
spatial = ["dep:geo-types", "dep:geo-traits", "dep:wkb"]
tls-none = []
uuid = ["dep:uuid", "sqlx-core/uuid"]
vendored-unix-odbc = ["odbc-api/vendored-unix-odbc"]

[dependencies]
bigdecimal = { version = "0.4.0", optional = true }
chrono = { version = "0.4.34", default-features = false, features = ["std", "clock"], optional = true }
time = { version = "0.3", optional = true }
geo-types = { version = "0.7", optional = true }
geo-traits = { version = "0.3", optional = true }
futures-core = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
flume = "0.12.0"
log = "0.4.28"
odbc-api = "28"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.142", features = ["raw_value"], optional = true }
sqlx-core = { version = "=0.9.0", default-features = false, features = ["any", "_rt-tokio"] }
sqlx-macros-core = { version = "=0.9.0", optional = true, features = ["macros"] }
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["rt", "sync"] }
url = "2.5.7"
uuid = { version = "1.12.1", optional = true }
wkb = { version = "0.9.2", optional = true }
[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
