[package]
name = "sqlx-mssql-odbc-macros"
version = "0.0.1"
edition = "2024"

[lib]
proc-macro = true

[features]
default = ["macros", "offline"]
macros = ["sqlx-macros-core/macros"]
offline = ["sqlx-mssql-odbc-core/offline"]
derive = ["sqlx-macros-core/derive"]
migrate = ["sqlx-macros-core/migrate"]

[dependencies]
sqlx-macros-core = { version = "=0.9.0", default-features = false }
sqlx-mssql-odbc-core = { version = "0.0.1", path = "../sqlx-mssql-odbc-core", features = ["offline"] }
proc-macro2 = "1.0.76"
syn = { version = "2.0.58", features = ["full"] }
quote = "1.0.35"
