[package]
name = "sqlx-mssql-odbc-macros"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/strawberyy-coconut/sqlx-mssql-odbc"
description = "Proc macro support for sqlx-mssql-odbc."
readme = "../README.md"
keywords = ["sqlx", "mssql", "sql-server", "odbc", "database"]
categories = ["database"]
rust-version = "1.96"

[lib]
proc-macro = true

[features]
default = ["macros", "offline"]
macros = ["sqlx-macros-core/macros"]
offline = ["sqlx-mssql-odbc-core/offline"]
derive = ["sqlx-macros-core/derive"]
migrate = ["sqlx-macros-core/migrate"]
uuid = ["sqlx-mssql-odbc-core/uuid"]
chrono = ["sqlx-mssql-odbc-core/chrono"]

[dependencies]
sqlx-macros-core = { version = "=0.9.0", default-features = false }
sqlx-mssql-odbc-core = { version = "0.1.0", path = "../sqlx-mssql-odbc-core", features = ["offline"] }
proc-macro2 = "1.0.76"
syn = { version = "2.0.58", features = ["full"] }
quote = "1.0.35"
