[package]
name = "sqlx-mssql-odbc-macros"
version = "0.1.7"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/strawberyy-coconut/sqlx-mssql-odbc"
description = "Proc macro support for sqlx-mssql-odbc."
readme = "../README.md"
keywords = ["sqlx", "mssql", "sql-server", "odbc", "database"]
categories = ["database"]
rust-version = "1.96"
documentation = "https://docs.rs/sqlx-mssql-odbc"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[features]
default = ["macros", "offline"]
macros = ["sqlx-macros-core/macros"]
offline = ["sqlx-mssql-odbc-core/offline"]
derive = ["sqlx-macros-core/derive"]
migrate = ["sqlx-macros-core/migrate"]
bigdecimal = ["sqlx-mssql-odbc-core/bigdecimal", "sqlx-macros-core/bigdecimal"]
chrono = ["sqlx-mssql-odbc-core/chrono", "sqlx-macros-core/chrono"]
json = ["sqlx-mssql-odbc-core/json", "sqlx-macros-core/json"]
rust_decimal = ["sqlx-mssql-odbc-core/rust_decimal", "sqlx-macros-core/rust_decimal"]
time = ["sqlx-mssql-odbc-core/time", "sqlx-macros-core/time"]
uuid = ["sqlx-mssql-odbc-core/uuid", "sqlx-macros-core/uuid"]
vendored-unix-odbc = ["sqlx-mssql-odbc-core/vendored-unix-odbc"]

[dependencies]
sqlx-macros-core = { version = "0.9.0", default-features = false }
sqlx-mssql-odbc-core = { version = "0.1.7", path = "../sqlx-mssql-odbc-core", features = ["offline"] }
proc-macro2 = "1.0.76"
syn = { version = "2.0.58", features = ["full"] }
quote = "1.0.35"
